vendor/pin-project-1.0.7/tests/ui/unstable-features/overlapping_marker_traits-feature-gate.stderr
error[E0119]: conflicting implementations of trait `std::marker::Unpin` for type `Struct<_>`
  --> $DIR/overlapping_marker_traits-feature-gate.rs:7:1
   |
7  | #[pin_project] //~ ERROR E0119
   | ^^^^^^^^^^^^^^ conflicting implementation for `Struct<_>`
...
14 | impl<T> Unpin for Struct<T> {}
   | --------------------------- first implementation here
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
